--- a/scss/jquery.jgrowl.scss
+++ b/scss/jquery.jgrowl.scss
@@ -2,7 +2,7 @@
 
 div.jGrowl {
 	padding: 			10px;
-	z-index: 			9999;
+	z-index: 			$toast-z-index;
 	color: 				#fff;
 	font-size: 			12px;
 }
@@ -84,8 +84,8 @@ div.center div.jGrowl-notification, div.center div.jGrowl-closer {
 div.jGrowl div.jGrowl-notification, div.jGrowl div.jGrowl-closer {
 	background-color: 		#000;
 	opacity: 				.71;
-    -ms-filter: 			"progid:DXImageTransform.Microsoft.Alpha(Opacity=71)"; 
-    filter: 				progid:DXImageTransform.Microsoft.Alpha(Opacity=71); 
+    -ms-filter: 			"progid:DXImageTransform.Microsoft.Alpha(Opacity=71)";
+    filter: 				progid:DXImageTransform.Microsoft.Alpha(Opacity=71);
 	zoom: 					1;
 	width: 					280px;
 	padding: 				10px;
@@ -107,7 +107,7 @@ div.jGrowl div.jGrowl-notification div.jGrowl-header {
 }
 
 div.jGrowl div.jGrowl-notification div.jGrowl-close {
-	z-index:				99;
+	z-index:				$toast-closing-z-index;
 	float: 					right;
 	font-weight: 			bold;
 	font-size: 				1em;
